feat: get config interface add head method
